# ebc-clip

./: .gitignore  LICENSE_COMMERCIAL  LICENSE_MIT  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: test.yml
ebc_clip/: __init__.py  core.py  utils.py
examples/: mlp_stability.py  tiny_llama.py
tests/: test_ebc.py
