# setup.cfg
[metadata]
name = ebc-clip
version = 0.1.0
description = Energy-Budget Gradient Clipping
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch>=1.13.0
    transformers>=4.30.0

[options.extras_require]
dev =
    pytest
    black
    isort

[flake8]
max-line-length = 88
extend-ignore = E203
